Use HashSet to eliminate duplicates.
Convert all to lower case.